--- a/angularjs/todo.html
+++ b/angularjs/todo.html
@@ -18,14 +18,21 @@
 
             todoApp.controller("ToDoCtrl", function($scope){
                 $scope.todo = model;
-                 $scope.incompleteCount = function () {                
+                $scope.incompleteCount = function () {                
                     var count = 0;                
                     angular.forEach($scope.todo.items, function (item) {                    
                         if (!item.done) { count++ }                
                     });                
                     return count;            
                 }
-               });
+                $scope.warningLevel = function(){
+                    return $scope.incompleteCount() < 3 ? "label-success" : "label-warning";
+                }
+
+                $scope.addNewItem = function(actionText){
+                    $scope.todo.items.push({action : actionText , done: false});
+                }
+            });
         </script>
     </head>
     <body ng-controller="ToDoCtrl">
@@ -33,14 +40,16 @@
         <div class="page-header">
             <h1>
                 {{todo.user}}`s To Do List
-                <span class="label label-default" ng-hide="incompleteCount() == 0" >{{incompleteCount()}}</span>
+                <span class="label label-default" ng-class="warningLevel()" 
+                    ng-hide="incompleteCount() == 0" >{{incompleteCount()}}</span>
             </h1>
         </div>
         <div class="panel">
             <div class="input-group">
-                <input class="form-control" />
+                <input class="form-control" ng-model="actionText" />
                 <span class="input-group-btn">
-                    <button class="btn btn-default">Add</button>
+                    <button class="btn btn-default"
+                        ng-click="addNewItem(actionText)">Add</button>
                 </span>
             </div>
             <table class="table table-striped">
