--- a/angularjs/app.html
+++ b/angularjs/app.html
@@ -10,6 +10,7 @@
         </script>
         <script src="controllers/sportsStore.js"></script>
         <script src="filters/customFilters.js"></script>
+        <script src="controllers/productListControllers.js"></script>
     </head>
     <body ng-controller="sportsStoreCtrl">
         <div class="navbar navbar-inverse">
