--- a/angularjs/admin.html
+++ b/angularjs/admin.html
@@ -18,11 +18,12 @@
                         templateUrl: "/views/adminMain.html"
                     });
 
-                    $routeProvider.otherwhen({
+                    $routeProvider.otherwise({
                         redirectTo: "/login"
                     });
                 });
         </script>
+        <script src="controllers/adminControllers.js"></script>
     </head>
     <body>
         <ng-view />
