--- a/angularjs/example.html
+++ b/angularjs/example.html
@@ -5,20 +5,41 @@
         <link rel="stylesheet" href="bootstrap.css"/>
         <link rel="stylesheet" href="bootstrap-theme.css"/>
         <script src="angular.js"></script>
+        <script src="controllers.js"></script>
+        <script src="filters.js"></script>
         <script>
-            var myApp = angular.module("exampleApp",[]);
-            myApp.controller("dayCtrl", function($scope){
-                //Controller statements will go here
+            var myApp = angular.module("exampleApp",
+                ["exampleApp.Controllers", "exampleApp.Filters",
+                 "exampleApp.Services", "exampleApp.Directives"]);
+            
+            angular.module("exampleApp.Directives", [])
+                .directive("highlight", function($filter){
+                    var dayFilter = $filter("dayName");
+                    return function(scope, element, attrs) {
+                        if(dayFilter(scope.day) == attrs["highlight"]){
+                            element.css("color", "red");
+                        }
+                    }
+                });
 
+            var now = new Date();
+            myApp.value("nowValue", now);
+
+            angular.module("exampleApp.Services", [])
+                .service("days", function($filter, nowValue){
+                var dayFilter = $filter("dayName");
+                this.today = dayFilter(now.getDay());
+                this.tomorrow = dayFilter(now.getDay() + 1);
             });
         </script>
     </head>
     <body>
-         <div class="panel" ng-controller="dayCtrl">
+         <div class="panel">
              <div class="page-header">
                  <h3>AngularJS App</h3>
              </div>
-             <h4>Today is {{day || "(unknown)"}}</h4>
+             <h4  ng-controller="dayCtrl" highlight="Friday">Today is {{day || "(unknown) | dayName"}}</h4>
+             <h4 ng-controller="tomorrowCtrl">Tomorrow is {{day || "(unknown) | dayName"}}</h4>
          </div>
     </body>
 </html>
