--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -22,7 +22,7 @@
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
             <h3 class="panel-header"> To Do List </h3>
             Data items will go here...
-            There are <span ng-bind="todos.length"></span> items
+            There are <span class ="ng-bind:todos.length"></span> items
         </div>
     </body>
 </html>
