--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -21,8 +21,7 @@
     <body>
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
             <h3 class="panel-header"> To Do List </h3>
-            Data items will go here...
-            There are <span class ="ng-bind:todos.length"></span> items
+            <div>There are {{todos.length}} items</div>
         </div>
     </body>
 </html>
