--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -21,7 +21,13 @@
     <body>
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
             <h3 class="panel-header"> To Do List </h3>
-            <div>There are {{todos.length}} items</div>
+            <div class="well">
+                <div>The first itme is : {{todos[0].action}}</div>
+            </div>
+            <div class="form-group well">
+                <label for="firstItem">Set First Item:</label>
+                <input name="firstItem" class="form-control" ng-model="todos[0].action" />
+            </div>            
         </div>
     </body>
 </html>
