--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -31,7 +31,11 @@
                 <tbody>
                     <tr ng-repeat="item in todos">
                         <td ng-repeat="prop in item">{{prop}}</td>
+                        <td ng-repeat="(key, value) in item">
+                            {{key}}={{value}}
+                        </td>
                     </tr>
+
                 </tbody>
             </table>
         </div>
