--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -24,12 +24,14 @@
             <table class="table">
                 <thead>
                     <tr>
+                        <th>#</th>
                         <th>Action</th>
                         <th>Done</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr ng-repeat="item in todos">
+                        <td>{{$index + 1}}</td>
                         <td ng-repeat="prop in item">{{prop}}</td>
                         <td ng-repeat="(key, value) in item">
                             {{key}}={{value}}
