--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -17,6 +17,10 @@
                     ];
                 });
         </script>
+        <style>
+            .odd { background-color: lightcoral}
+            .even { background-color: lavenderblush}
+        </style>
     </head>
     <body>
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
@@ -30,7 +34,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="item in todos">
+                    <tr ng-repeat="item in todos" ng-class="$even ? 'odd' : 'even'">
                         <td>{{$index + 1}}</td>
                         <td ng-repeat="prop in item">{{prop}}</td>
                         <td ng-repeat="(key, value) in item">
