ng-if  $first $last

--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -36,10 +36,8 @@
                 <tbody>
                     <tr ng-repeat="item in todos" ng-class="$even ? 'odd' : 'even'">
                         <td>{{$index + 1}}</td>
-                        <td ng-repeat="prop in item">{{prop}}</td>
-                        <td ng-repeat="(key, value) in item">
-                            {{key}}={{value}}
-                        </td>
+                        <td>{{item.action}}</td>
+                        <td><span ng-if="$first || $last">{{item.complete}}</span></td>
                     </tr>
 
                 </tbody>
