--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -34,12 +34,15 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="item in todos" ng-class="$even ? 'odd' : 'even'">
-                        <td>{{$index + 1}}</td>
-                        <td>{{item.action}}</td>
-                        <td><span ng-if="$first || $last">{{item.complete}}</span></td>
-                    </tr>
-
+                  <tr ng-repeat-start="item in todos">
+                      <td>This is item {{$index}}</td>
+                  </tr>
+                  <tr>
+                      <td>The Action is: {{item.action}}</td>
+                  </tr>
+                  <tr ng-repeat-end>
+                      <td>Item {{$index}} is {{$item.complete? '' : "not "}} complete</td>
+                  </tr>
                 </tbody>
             </table>
         </div>
