--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -15,6 +15,10 @@
                         { action: "Buy flowers", complete: false },
                         { action: "Call family", complete: false }
                     ];
+
+                    $scope.viewFile = function(){
+                        return $scope.showList ? "list.html" : "table.html";
+                    };
                 });
         </script>
         <style>
@@ -25,7 +29,15 @@
     <body>
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
             <h3 class="panel-header"> To Do List </h3>
-            <ng-include src="'table.html'"></ng-include>
+            <div class="well">
+                <div class="checkbox">
+                    <label>
+                        <input type="checkbox" ng-model = "showList">
+                        Use the list view
+                    </label>
+                </div>
+            </div>
+            <ng-include src="viewFile()"></ng-include>
         </div>
     </body>
 </html>
