--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -38,7 +38,7 @@
             <h3 class="panel-header"> To Do List </h3>
             <div class="well">
                 <div class="radio" ng-repeat="button in ['None', 'Table', 'List']">
-                    <label>
+                    <label ng-cloak>
                         <input type="radio" ng-model="data.mode"
                             value="{{button}}" ng-checked="$first" />
                             {{button}}
@@ -46,7 +46,7 @@
                 </div>    
             </div>
 
-            <div ng-switch on="data.mode">
+            <div ng-switch on="data.mode" ng-cloak>
                 <div ng-switch-when="Table">
                     <table class="table">
                         <thead>
