--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -55,11 +55,11 @@
             </div>
             <div ng-switch on="data.mode" ng-cloak>
                 <div ng-switch-when="Table">
-                    <table class="table">
+                    <table class="table table-striped">
                         <thead>
                             <tr><th>#</th><th>Action</th><th>Done</th></tr>
                         </thead>
-                        <tr ng-repeat="item in todos" ng-class="$odd ? 'odd' : 'even'">
+                        <tr ng-repeat="item in todos" ng-class="$odd ? 'odd' : 'even'" ng-hide="item.complete">
                             <td>{{$index + 1}}</td>
                             <td ng-repeat="prop in item">{{prop}}</td>
                         </tr>
