--- a/angularjs/directives.html
+++ b/angularjs/directives.html
@@ -48,7 +48,7 @@
                     </div>
                 </div>    
             </div>
-            <table class="table table-striped">
+            <table class="table">
                 <thead>
                     <tr><th>#</th><th>Action</th><th>Done</th></tr>
                 </thead>
