--- a/angularjs/forms.html
+++ b/angularjs/forms.html
@@ -17,6 +17,12 @@
 
                 });
         </script>
+        <style>
+            form .ng-invalid.ng-dirty { background-color: lightpink;}
+            form .ng-valid.ng-dirty { background-color: lightgreen;}
+            span.summary.ng-invalid { color: red; font-weight: bold; }
+            span.summary.ng-valid { color: green; }
+        </style>
     </head>
     <body>
         <div id="todoPanel" class="panel" ng-controller="defaultCtrl">
@@ -47,7 +53,11 @@
                 <div class="well">
                        Message: {{message}}
                     <div>
-                           Valid: {{myForm.$valid}}
+                           Valid: 
+                           <span class="summary"
+                                ng-class="myForm.$valid ? 'ng-valid' : 'ng-invalid'">
+                                {{myForm.$valid}}
+                           </span>
                     </div>
                 </div>
            </form>
