--- a/angularjs/controllers.html
+++ b/angularjs/controllers.html
@@ -6,15 +6,47 @@
         <link href="bootstrap.css" rel="stylesheet"/>
         <link href="bootstrap-theme.css" rel="stylesheet" />
         <script>
-            angular.module("exampleApp",[])
-                .controller("simpleCtrl",function($scope) {
-                    
+        angular.module("exampleApp", [])
+            .controller("simpleCtrl", function ($scope, $rootScope) {
+ 
+            $scope.$on("zipCodeUpdated", function (event, args) {
+                $scope[args.type] = args.zipCode;
+            });
+ 
+            $scope.setAddress = function (type, zip) {
+                $rootScope.$broadcast("zipCodeUpdated", {
+                    type: type, zipCode: zip
                 });
-        </script>
-    </head>
-    <body>
-         <div class="well" ng-controller="simpleCtrl">
-             Content will go here.
-         </div>
-    </body>
+                console.log("Type: " + type + " " + zip);
+            }
+ 
+            $scope.copyAddress = function () {
+                $scope.zip = $scope.billingZip;
+            }
+        });
+    </script>
+</head>
+<body>
+    <div class="well" ng-controller="simpleCtrl">
+        <h4>Billing Zip Code</h4>
+        <div class="form-group">
+            <input class="form-control" ng-model="zip">
+        </div>
+        <button class="btn btn-primary" ng-click="setAddress('billingZip', zip)">
+            Save Billing
+        </button>
+    </div>
+    <div class="well" ng-controller="simpleCtrl">
+        <h4>Shipping Zip Code</h4>
+        <div class="form-group">
+            <input class="form-control" ng-model="zip">
+        </div>
+        <button class="btn btn-primary" ng-click="copyAddress()">
+            Use Billing
+        </button>
+        <button class="btn btn-primary" ng-click="setAddress('shippingZip', zip)">
+            Save Shipping
+        </button>
+    </div>
+</body>
 </html>
