--- a/angularjs/controllers.html
+++ b/angularjs/controllers.html
@@ -18,7 +18,7 @@
                 <button class="btn btn-default" type="button"
                         ng-click="changeCase()">Case</button>
             </span>
-            <input class="form-control" ng-model="dataValue">
+            <input class="form-control" ng-model="data.dataValue">
         </div>
     </div>
 
@@ -31,7 +31,7 @@
                 <button class="btn btn-default" type="button"
                         ng-click="changeCase()">Case</button>
             </span>
-            <input class="form-control" ng-model="dataValue">
+            <input class="form-control" ng-model="data.dataValue">
         </div>
     </div>
 
@@ -46,7 +46,7 @@
                 <button class="btn btn-default" type="button"
                         ng-click="shiftFour()">Shift</button>
             </span>
-            <input class="form-control" ng-model="dataValue">
+            <input class="form-control" ng-model="data.dataValue">
         </div>
     </div>
 </body>
