--- a/angularjs/controllers.html
+++ b/angularjs/controllers.html
@@ -2,51 +2,53 @@
 <html ng-app="exampleApp">
     <head>
         <title>Controllers</title>
-        <script src="angular.js"></script>
-        <script src="controllers.js"></script>
-        <link href="bootstrap.css" rel="stylesheet"/>
-        <link href="bootstrap-theme.css" rel="stylesheet" />
-        
+    <script src="angular.js"></script>
+    <link href="bootstrap.css" rel="stylesheet" />
+    <link href="bootstrap-theme.css" rel="stylesheet" />
+    <script>
+        var app = angular.module("exampleApp", []);
+ 
+        app.controller("firstController", function ($scope) {
+ 
+            $scope.dataValue = "Hello, Adam";
+ 
+            $scope.reverseText = function () {
+                $scope.dataValue = $scope.dataValue.split("").reverse().join("");
+            }
+        });
+ 
+        app.controller("secondController", function ($scope) {
+ 
+            $scope.dataValue = "Hello, Jacqui";
+ 
+            $scope.changeCase = function () {
+                $scope.dataValue = $scope.dataValue.toUpperCase();
+            };
+        });
+    </script>
 </head>
-<body ng-controller="topLevelCtrl">
-    <div class="well">
-        <h4>Top Level Controller</h4>
+<body>
+    <div class="well" ng-controller="firstController">
+        <h4>First Controller</h4>
         <div class="input-group">
             <span class="input-group-btn">
                 <button class="btn btn-default" type="button"
                         ng-click="reverseText()">Reverse</button>
-                <button class="btn btn-default" type="button"
-                        ng-click="changeCase()">Case</button>
             </span>
-            <input class="form-control" ng-model="data.dataValue">
+            <input class="form-control" ng-model="dataValue">
         </div>
     </div>
-
-    <div class="well" ng-controller="firstChildCtrl">
-        <h4>First Child Controller</h4>
+ 
+    <div class="well" ng-controller="secondController">
+        <h4>Second Controller</h4>
         <div class="input-group">
             <span class="input-group-btn">
                 <button class="btn btn-default" type="button"
-                        ng-click="reverseText()">Reverse</button>
-                <button class="btn btn-default" type="button"
-                        ng-click="changeCase()">Case</button>
+                        ng-click="changeCase()">
+                    Case
+                </button>
             </span>
-            <input class="form-control" ng-model="data.dataValue">
-        </div>
-    </div>
-
-    <div class="well" ng-controller="secondChildCtrl">
-        <h4>Second Child Controller</h4>
-        <div class="input-group">
-            <span class="input-group-btn">
-                <button class="btn btn-default" type="button"
-                        ng-click="reverseText()">Reverse</button>
-                <button class="btn btn-default" type="button"
-                        ng-click="changeCase()">Case</button>
-                <button class="btn btn-default" type="button"
-                        ng-click="shiftFour()">Shift</button>
-            </span>
-            <input class="form-control" ng-model="data.dataValue">
+            <input class="form-control" ng-model="dataValue">
         </div>
     </div>
 </body>
