--- a/angularjs/filters.html
+++ b/angularjs/filters.html
@@ -20,6 +20,11 @@
                     { name: "Wine", category: "Drinks", price: 8.99, expiry: 365 },
                     { name: "Whiskey", category: "Drinks", price: 45.99, expiry: 365 }
                 ];
+
+                $scope.getExpiryDate = function(days) {
+                    var now = new Date();
+                    return now.setDate(now.getDate() + days);
+                }
             });
     </script>
 </head>
@@ -45,8 +50,8 @@
                     <tr ng-repeat="p in products">
                         <td>{{p.name}}</td>
                         <td>{{p.category}}</td>
-                        <td>{{p.expiry}}</td>
-                        <td class="text-right">{{p.price}}</td>
+                        <td>{{getExpiryDate(p.expiry) | date: "dd MMM yy"}}
+                        <td class="text-right">{{p.price | currency }}</td>
                     </tr>
                 </tbody>
             </table>
