--- a/angularjs/filters.html
+++ b/angularjs/filters.html
@@ -2,6 +2,7 @@
 <head>
     <title>Filters</title>
     <script src="angular.js"></script>
+    <script src="angular-locale-fr-fr.js"></script>
     <link href="bootstrap.css" rel="stylesheet" />
     <link href="bootstrap-theme.css" rel="stylesheet" />
     <script>
@@ -24,7 +25,17 @@
                 $scope.getExpiryDate = function(days) {
                     var now = new Date();
                     return now.setDate(now.getDate() + days);
+                };
+
+                $scope.limitVal = "5";
+                $scope.limitRange = [];
+                for(var i  = (0 - $scope.products.length); i <= $scope.products.length; i++) {
+                    $scope.limitRange.push(i.toString());
                 }
+
+                $scope.selectItems = function(item) {
+                    return item.category == "Fish" || item.name == "Beer";
+                };
             });
     </script>
 </head>
@@ -37,6 +48,10 @@
             </h3>
         </div>
         <div class="panel-body">
+            Limit: <select ng-model="limitVal"
+                    ng-options="item for item in limitRange"></select>
+        </div>
+        <div class="panel-body">
             <table class="table table-striped table-bordered table-condensed">
                 <thead>
                     <tr>
@@ -47,10 +62,10 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr ng-repeat="p in products">
+                    <tr ng-repeat="p in products | filter:selectItems">
                         <td>{{p.name}}</td>
                         <td>{{p.category}}</td>
-                        <td>{{getExpiryDate(p.expiry) | date: "dd MMM yy"}}
+                        <td>{{getExpiryDate(p.expiry) | date: "shortDate"}}
                         <td class="text-right">{{p.price | currency }}</td>
                     </tr>
                 </tbody>
