--- a/angularjs/customdirectives.html
+++ b/angularjs/customdirectives.html
@@ -8,6 +8,12 @@
             angular.module("exampleApp",[])
                 .directive("unorderedList", function() {
                     return function (scope, element, attrs) {
+                        var data = scope[attrs["unorderedList"]];
+                        if(angular.isArray(data)) {
+                            for(var i = 0; i < data.length; i++) {
+                                console.log("Item: " + data[i].name);
+                            }
+                        }
 
                     }
                 })
