--- a/angularjs/advancedirectives.html
+++ b/angularjs/advancedirectives.html
@@ -43,7 +43,7 @@
             <h3>Products</h3>
         </div>
         <div class="panel-body">
-            <div unordered-list="products" list-property="price | currency"></div>
+            <unordered-list list-source="products" list-property="price | currency"/>
         </div>
     </div>
 </body>
