--- a/angularjs/advancedirectives.html
+++ b/angularjs/advancedirectives.html
@@ -9,24 +9,10 @@
             .directive("unorderedList", function () {
                 return { 
                     link :  function (scope, element, attrs) {
-                            var data = scope[attrs["unorderedList"] || attrs["listSource"]];
-                            var propertyExpression = attrs["listProperty"] || "price | currency";
-                            if (angular.isArray(data)) {
-                                var listElem = angular.element("<ul>");
-                                if(element[0].nodeName == "#comment") {
-                                    element.parent().append(listElem);
-                                } else {
-                                    element.append(listElem);
-                                }
-                                for (var i = 0; i < data.length; i++) {
-                                    var itemElement = angular.element("<li>")
-                                        .text(scope.$eval(propertyExpression, data[i]));
-                                    listElem.append(itemElement);
-                                }
-                            }
-                        },
-                    restrict: "EACM"
-
+                           scope.data = scope[attrs["unorderedList"]];
+                    },
+                    restrict: "A",
+                    template: "<ul><li ng-repeat='item in data'>" + "{{item.price | currency}}</li></ul>"
                 }
             }).controller("defaultCtrl", function ($scope) {
                 $scope.products = [
@@ -43,7 +29,9 @@
             <h3>Products</h3>
         </div>
         <div class="panel-body">
-            <unordered-list list-source="products" list-property="price | currency"/>
+            <div unordered-list="products">
+                This is where the list will go
+            </div>
         </div>
     </div>
 </body>
