--- a/angularjs/domApi.html
+++ b/angularjs/domApi.html
@@ -8,16 +8,18 @@
     <link href="bootstrap-theme.css" rel="stylesheet">
     <script>
         angular.module("exampleApp",[])
-                .controller("defaultCtrl", function ($scope, $window, $document) {
-                    $document.find("button").on("click",function(event){
-                        $window.alert(event.target.innerText);
-                    });
+                .controller("defaultCtrl", function ($scope, $interval) {
+                    $interval(function () {
+                        $scope.time = new Date().toTimeString();
+                    },1000);
 
                 });
     </script>
 </head>
 <body ng-controller="defaultCtrl" class="well">
-    <button class="btn btn-primary">Click Me</button>
-
+    <h4 class="panel-heading">Time</h4>
+       <div class="panel-body">
+           The time is: {{time}}
+       </div>
 </body>
 </html>
