--- a/angularjs/ajax.html
+++ b/angularjs/ajax.html
@@ -37,7 +37,7 @@
                                 return rootElem.html();
                             }
                         }
-                        $http.post("productData.xml", $scope.products, config);
+                        $http.post("ajax.html", $scope.products, config);
                     }
                 });
     </script>
