--- a/angularjs/products.html
+++ b/angularjs/products.html
@@ -4,16 +4,17 @@
     <title>Products</title>
     <script src="angular.js"></script>
     <script src="angular-resource.js"></script>
+    <script src="angular-route.js"></script>
     <link href="bootstrap.css" rel="stylesheet" />
     <link href="bootstrap-theme.css" rel="stylesheet" />
     <script src="products.js"></script>
     <script src="increment.js"></script>
+    <base href="/">
 </head>
 <body ng-controller="defaultCtrl">
     <div class="panel panel-primary">
         <h3 class="panel-heading">Products</h3>
-        <ng-include src="'tableView.html'" ng-show="displayMode == 'list'"></ng-include>
-        <ng-include src="'editorView.html'" ng-show="displayMode == 'edit'"></ng-include>
+        <div ng-view></div>
     </div>
 </body>
 </html>
