--- a/angularjs/products.html
+++ b/angularjs/products.html
@@ -5,16 +5,23 @@
     <script src="angular.js"></script>
     <script src="angular-resource.js"></script>
     <script src="angular-route.js"></script>
+    <script src="angular-animate.js"></script>
     <link href="bootstrap.css" rel="stylesheet" />
     <link href="bootstrap-theme.css" rel="stylesheet" />
     <script src="products.js"></script>
     <script src="increment.js"></script>
     <base href="/">
+    <style type="text/css">
+        .ngFade.ng-enter { transition: 0.5s linear all; opacity: 0.5;}
+        .ngFade.ng-enter-active {  opacity: 1; }
+        .ngFade.ng-leave { transition: 0.5s linear all; opacity: 1;}
+        .ngFade.ng-leave-active { opacity: 0.5;}
+    </style>
 </head>
 <body ng-controller="defaultCtrl">
     <div class="panel panel-primary">
         <h3 class="panel-heading">Products</h3>
-        <div ng-view></div>
+        <div ng-view class="ngFade"></div>
     </div>
 </body>
 </html>
