--- a/angularjs/appTest.html
+++ b/angularjs/appTest.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="exampleApp">
+<html ng-app="exampleAppTest">
 <head>
     <title>Example for Testing</title>
     <script src="angular.js"></script>
